# vibecheck

./: .gitignore  LICENSE  README.md  pyproject.toml  vibecheck.py
examples/: secure.py  secure_app.py  vibe_coded.py  vulnerable.py
