[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vibecheck"
version = "1.0.0"
description = "AI-Generated Code Security Meta-Auditor — one command to catch what vibe-coded projects get wrong"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Kris Kimmerle", email = "kris@kriskimmerle.com"},
]
keywords = ["security", "ai", "vibe-coding", "static-analysis", "audit", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/vibecheck"
Repository = "https://github.com/kriskimmerle/vibecheck"
Issues = "https://github.com/kriskimmerle/vibecheck/issues"

[project.scripts]
vibecheck = "vibecheck:main"
